Page First Draft Complete (Footer Mobile Version Done) Underline Added to Powered By

--- a/index.html
+++ b/index.html
@@ -444,7 +444,114 @@
           </aside>
         </div>
         <!----------------------- SM -> LG SCREEN FOOTER ----------------------->
-        <div class="d-xl-none text-light"></div>
+        <div id="mobileFooter" class="d-xl-none text-light">
+          <h2 class="display-5 fw-semibold text-light text-center scrollIn">
+            <u>Powered By</u>
+          </h2>
+          <h2 class="display-5 fw-semibold text-light text-center scrollIn">
+            Penn-Northwest Homegrown Initiative
+          </h2>
+          <hr />
+          <p class="lead scrollIn">Enter Email To Join Our Mailing List!</p>
+          <form>
+            <div class="input-group">
+              <!-- <label for="exampleInputEmail1" class="form-label"
+                >Enter Your Email To Join Our Mailing List!</label
+              > -->
+              <!-- <label for="footerEmail">Test</label> -->
+              <input
+                type="email"
+                class="form-control bg-light scrollIn"
+                name="footerEmail"
+                id="footerEmail"
+                placeholder="Email@Site.com"
+                aria-describedby="emailHelp"
+              />
+              <button
+                class="btn btn-outline-secondary"
+                type="button"
+                id="button-addon1"
+              >
+                SEND
+              </button>
+              <!-- <div id="emailHelp" class="form-text">
+                We'll never share your email with anyone else.
+              </div> -->
+            </div>
+          </form>
+          <hr />
+
+          <aside class="text-light" id="footerLinkList">
+            <nav>
+              <ul class="list-unstyled text-light">
+                <li class="scrollIn">
+                  <a class="footer-list-item" href="#"
+                    >Amenities <span>&gt;</span></a
+                  >
+                </li>
+                <li class="scrollIn">
+                  <a class="footer-list-item" href="#"
+                    >Events <span>&gt;</span></a
+                  >
+                </li>
+                <li class="scrollIn">
+                  <a class="footer-list-item" href="#"
+                    >Live <span>&gt;</span></a
+                  >
+                </li>
+                <li class="scrollIn">
+                  <a class="footer-list-item" href="#"
+                    >Find Work <span>&gt;</span></a
+                  >
+                </li>
+                <li class="scrollIn">
+                  <a class="footer-list-item" href="#"
+                    >Option 4 <span>&gt;</span></a
+                  >
+                </li>
+                <li class="scrollIn">
+                  <a class="footer-list-item" href="#"
+                    >Option 5 <span>&gt;</span></a
+                  >
+                </li>
+              </ul>
+            </nav>
+            <nav>
+              <ul class="list-unstyled text-light">
+                <li class="scrollIn">
+                  <a class="footer-list-item" href="#"
+                    >Amenities <span>&gt;</span></a
+                  >
+                </li>
+                <li class="scrollIn">
+                  <a class="footer-list-item" href="#"
+                    >Events <span>&gt;</span></a
+                  >
+                </li>
+                <li class="scrollIn">
+                  <a class="footer-list-item" href="#"
+                    >Live <span>&gt;</span></a
+                  >
+                </li>
+                <li class="scrollIn">
+                  <a class="footer-list-item" href="#"
+                    >Find Work <span>&gt;</span></a
+                  >
+                </li>
+                <li class="scrollIn">
+                  <a class="footer-list-item" href="#"
+                    >Option 4 <span>&gt;</span></a
+                  >
+                </li>
+                <li class="scrollIn">
+                  <a class="footer-list-item" href="#"
+                    >Option 5 <span>&gt;</span></a
+                  >
+                </li>
+              </ul>
+            </nav>
+          </aside>
+        </div>
 
         <!-- <h2 class="d-xl-none text-light">Test</h2> -->
       </footer>
