Header img reoriented for @media max-width: 1800px and below. Footer items repositioned

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
           </h2>
           <hr />
           <form>
-            <div class="input-group">
+            <div id="footer-email-input" class="input-group">
               <!-- <label for="exampleInputEmail1" class="form-label"
                 >Enter Your Email To Join Our Mailing List!</label
               > -->
@@ -483,71 +483,37 @@
 
           <aside class="text-light" id="footerLinkList">
             <nav>
-              <ul class="list-unstyled text-light">
-                <li class="scrollIn">
-                  <a class="footer-list-item" href="#"
-                    >Amenities <span>&gt;</span></a
-                  >
-                </li>
-                <li class="scrollIn">
-                  <a class="footer-list-item" href="#"
-                    >Events <span>&gt;</span></a
-                  >
-                </li>
-                <li class="scrollIn">
+              <ul class="list-unstyled text-light text-center">
+                <li class="scrollIn footer-anchor-nav-scrollIn">
                   <a class="footer-list-item" href="#"
                     >Live <span>&gt;</span></a
                   >
                 </li>
-                <li class="scrollIn">
+                <li class="scrollIn footer-anchor-nav-scrollIn">
                   <a class="footer-list-item" href="#"
-                    >Find Work <span>&gt;</span></a
+                    >Work <span>&gt;</span></a
                   >
                 </li>
-                <li class="scrollIn">
+                <li class="scrollIn footer-anchor-nav-scrollIn">
                   <a class="footer-list-item" href="#"
-                    >Option 4 <span>&gt;</span></a
+                    >Learn <span>&gt;</span></a
                   >
                 </li>
-                <li class="scrollIn">
+                <li class="scrollIn footer-anchor-nav-scrollIn">
                   <a class="footer-list-item" href="#"
-                    >Option 5 <span>&gt;</span></a
+                    >Play <span>&gt;</span></a
                   >
                 </li>
-              </ul>
-            </nav>
-            <nav>
-              <ul class="list-unstyled text-light">
-                <li class="scrollIn">
-                  <a class="footer-list-item" href="#"
-                    >Amenities <span>&gt;</span></a
-                  >
-                </li>
-                <li class="scrollIn">
-                  <a class="footer-list-item" href="#"
-                    >Events <span>&gt;</span></a
-                  >
-                </li>
-                <li class="scrollIn">
-                  <a class="footer-list-item" href="#"
-                    >Live <span>&gt;</span></a
-                  >
-                </li>
-                <li class="scrollIn">
-                  <a class="footer-list-item" href="#"
-                    >Find Work <span>&gt;</span></a
-                  >
-                </li>
-                <li class="scrollIn">
+                <!-- <li class="scrollIn footer-anchor-nav-scrollIn">
                   <a class="footer-list-item" href="#"
                     >Option 4 <span>&gt;</span></a
                   >
                 </li>
-                <li class="scrollIn">
+                <li class="scrollIn footer-anchor-nav-scrollIn">
                   <a class="footer-list-item" href="#"
                     >Option 5 <span>&gt;</span></a
                   >
-                </li>
+                </li> -->
               </ul>
             </nav>
           </aside>
