Added JS for navbar hiding on scroll down

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <nav
       class="navbar navbar-expand-lg fixed-top fs-5 bg-light shadow scrollIn"
     >
-      <div class="container-fluid">
+      <div id="nav-div" class="container-fluid">
         <a class="navbar-brand fs-3 d-none d-lg-block" href="./index.html">
           <img
             src="./img/Homegrown_crop_1.jpg"
@@ -44,7 +44,7 @@
           />
           Discover Mercer County</a
         >
-        <a class="navbar-brand fs-3 d-lg-none" href="#">
+        <a id="goMercerCounty" class="navbar-brand fs-3 d-lg-none" href="#">
           <img
             src="./img/Homegrown_crop_1.jpg"
             alt="Logo"
@@ -54,6 +54,7 @@
           Go Mercer County</a
         >
         <button
+          id="mobile-nav-button"
           class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
