--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link disabled">About</a>
+              <a class="nav-link">About</a>
             </li>
           </ul>
           <!-- <form class="d-flex" role="search">
