Init work.html, styles.css, JS Button hrefs script added in app.js

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>
-      Discover Mercer Country - A Penn-Northwest Homegrown Initiative Site
+      Go Mercer Country - A Penn-Northwest Homegrown Initiative Site
     </title>
     <meta
       name="description"
@@ -37,7 +37,7 @@
       <div id="nav-div" class="container-fluid">
         <a class="navbar-brand fs-3 d-none d-lg-block" href="./index.html">
           <img
-            src="./img/Homegrown_crop_1.jpg"
+            src="./images/Homegrown_crop_1.jpg"
             alt="Logo"
             class="d-inline-block"
             height="70"
@@ -46,7 +46,7 @@
         >
         <a id="goMercerCounty" class="navbar-brand fs-3 d-lg-none" href="#">
           <img
-            src="./img/Homegrown_crop_1.jpg"
+            src="./images/Homegrown_crop_1.jpg"
             alt="Logo"
             class="d-inline-block"
             height="70"
@@ -78,7 +78,9 @@
                 Work
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li>
+                  <a class="dropdown-item" href="./pages/work.html">Work</a>
+                </li>
                 <li><a class="dropdown-item" href="#">Another action</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
@@ -149,17 +151,15 @@
             <!-- XL -->
             <!-- <div class="container d-none d-xl-block"></div> -->
             <div class="container" id="work-scrollIn-ID">
-              <h2 class="display-1 work-scrollIn-class scrollIn">
-                Looking For Work?
-              </h2>
+              <h2 class="display-1 work-scrollIn-class scrollIn">Work Hard</h2>
               <p class="lead work-scrollIn-class scrollIn">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
-                odit suscipit perspiciatis? Obcaecati molestiae in, magnam unde
-                veritatis consectetur fugit dolorum, saepe ipsam iste
-                accusantium delectus error consequatur nulla et.
+                Mercer County is a great place to work. Eius odit suscipit
+                perspiciatis? Obcaecati molestiae in, magnam unde veritatis
+                consectetur fugit dolorum, saepe ipsam iste accusantium delectus
+                error consequatur nulla et.
               </p>
               <div class="work-scrollIn-class scrollIn">
-                <h3 class="display-4">Find Employees</h3>
+                <h3 class="display-4">Learn Fast</h3>
                 <!-- <button type="button" class="btn btn-secondary">
                   Secondary
                 </button> -->
@@ -197,7 +197,7 @@
             <!-- XL -->
             <!-- <div class="container d-none d-xl-block"></div> -->
             <div class="container">
-              <h2 class="display-1 amenities-scrollIn scrollIn">Amenities</h2>
+              <h2 class="display-1 amenities-scrollIn scrollIn">Play Easy</h2>
               <p class="lead amenities-scrollIn scrollIn">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
                 odit suscipit perspiciatis? Obcaecati molestiae in, magnam unde
@@ -205,7 +205,7 @@
                 accusantium delectus error consequatur nulla et.
               </p>
               <div class="amenities-scrollIn scrollIn">
-                <h3 class="display-4">Events</h3>
+                <h3 class="display-4">Current Events</h3>
                 <!-- <button type="button" class="btn btn-secondary">
                   Secondary
                 </button> -->
@@ -248,16 +248,16 @@
                 accusantium delectus error consequatur nulla et.
               </p>
               <div class="live-scrollIn scrollIn">
-                <h3 class="display-4">Live Subheading</h3>
+                <h3 class="display-4">Find Your Place</h3>
                 <!-- <button type="button" class="btn btn-secondary">
                   Secondary
                 </button> -->
               </div>
               <p class="lead live-scrollIn scrollIn">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
-                odit suscipit perspiciatis? Obcaecati molestiae in, magnam unde
-                veritatis consectetur fugit dolorum, saepe ipsam iste
-                accusantium delectus error consequatur nulla et.
+                Take the quiz. Eius odit suscipit perspiciatis? Obcaecati
+                molestiae in, magnam unde veritatis consectetur fugit dolorum,
+                saepe ipsam iste accusantium delectus error consequatur nulla
+                et.
               </p>
               <div class="live-scrollIn scrollIn">
                 <button id="live-button" class="btn btn-background-slide">
@@ -324,32 +324,32 @@
               <ul class="list-unstyled text-light">
                 <li>
                   <a class="footer-list-item" href="#"
-                    >Amenities <span>&gt;</span></a
-                  >
-                </li>
-                <li>
-                  <a class="footer-list-item" href="#"
-                    >Events <span>&gt;</span></a
-                  >
-                </li>
-                <li>
-                  <a class="footer-list-item" href="#"
                     >Live <span>&gt;</span></a
                   >
                 </li>
                 <li>
                   <a class="footer-list-item" href="#"
-                    >Find Work <span>&gt;</span></a
+                    >Learn <span>&gt;</span></a
                   >
                 </li>
                 <li>
                   <a class="footer-list-item" href="#"
-                    >Option 4 <span>&gt;</span></a
+                    >Work <span>&gt;</span></a
                   >
                 </li>
                 <li>
                   <a class="footer-list-item" href="#"
-                    >Option 5 <span>&gt;</span></a
+                    >Play <span>&gt;</span></a
+                  >
+                </li>
+                <li>
+                  <a class="footer-list-item" href="#"
+                    >About Us <span>&gt;</span></a
+                  >
+                </li>
+                <li>
+                  <a class="footer-list-item" href="#"
+                    >Link <span>&gt;</span></a
                   >
                 </li>
               </ul>
@@ -358,32 +358,32 @@
               <ul class="list-unstyled text-light">
                 <li>
                   <a class="footer-list-item" href="#"
-                    >About Us <span>&gt;</span></a
+                    >Click Me <span>&gt;</span></a
                   >
                 </li>
                 <li>
                   <a class="footer-list-item" href="#"
-                    >Contact Us <span>&gt;</span></a
+                    >Click Me <span>&gt;</span></a
                   >
                 </li>
                 <li>
                   <a class="footer-list-item" href="#"
-                    >Live <span>&gt;</span></a
+                    >Click Me <span>&gt;</span></a
                   >
                 </li>
                 <li>
                   <a class="footer-list-item" href="#"
-                    >Find Work <span>&gt;</span></a
+                    >Click Me <span>&gt;</span></a
                   >
                 </li>
                 <li>
                   <a class="footer-list-item" href="#"
-                    >Events <span>&gt;</span></a
+                    >Click Me <span>&gt;</span></a
                   >
                 </li>
                 <li>
                   <a class="footer-list-item" href="#"
-                    >Events <span>&gt;</span></a
+                    >Click Me <span>&gt;</span></a
                   >
                 </li>
               </ul>
@@ -392,32 +392,32 @@
               <ul class="list-unstyled text-light">
                 <li>
                   <a class="footer-list-item" href="#"
-                    >About Us <span>&gt;</span></a
+                    >Click Me <span>&gt;</span></a
                   >
                 </li>
                 <li>
                   <a class="footer-list-item" href="#"
-                    >Contact Us <span>&gt;</span></a
+                    >Click Me <span>&gt;</span></a
                   >
                 </li>
                 <li>
                   <a class="footer-list-item" href="#"
-                    >Live <span>&gt;</span></a
+                    >Click Me <span>&gt;</span></a
                   >
                 </li>
                 <li>
                   <a class="footer-list-item" href="#"
-                    >Find Work <span>&gt;</span></a
+                    >Click Me <span>&gt;</span></a
                   >
                 </li>
                 <li>
                   <a class="footer-list-item" href="#"
-                    >Events <span>&gt;</span></a
+                    >Click Me <span>&gt;</span></a
                   >
                 </li>
                 <li>
                   <a class="footer-list-item" href="#"
-                    >Events <span>&gt;</span></a
+                    >Click Me <span>&gt;</span></a
                   >
                 </li>
               </ul>
@@ -483,6 +483,11 @@
                 <li class="scrollIn footer-anchor-nav-scrollIn">
                   <a class="footer-list-item" href="#"
                     >Play <span>&gt;</span></a
+                  >
+                </li>
+                <li class="scrollIn footer-anchor-nav-scrollIn">
+                  <a class="footer-list-item" href="#"
+                    >About Us <span>&gt;</span></a
                   >
                 </li>
                 <!-- <li class="scrollIn footer-anchor-nav-scrollIn">
