--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item dropdown">
+            <!-- <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
@@ -87,19 +87,24 @@
                   <a class="dropdown-item" href="#">Something else here</a>
                 </li>
               </ul>
+            </li> -->
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="./pages/work.html"
+                >Work</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="#">Live</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Learn</a>
+              <a class="nav-link" href="./pages/work.html">Learn</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Play</a>
+              <a class="nav-link" href="./pages/play.html">Play</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link">About</a>
+              <a class="nav-link" href="./pages/about.html">About</a>
             </li>
           </ul>
           <!-- <form class="d-flex" role="search">
@@ -171,13 +176,17 @@
                 accusantium delectus error consequatur nulla et.
               </p>
               <div class="work-scrollIn-class scrollIn">
-                <button id="work-button" class="btn btn-background-slide">
+                <a
+                  href="./pages/work.html"
+                  id="work-button"
+                  class="btn btn-background-slide"
+                >
                   Click To Learn More
                   <i class="gg-arrow-right d-inline-block"></i>
                   <div
                     class="text-light btn-background-slide--blue btn-background-slide-bg"
                   ></div>
-                </button>
+                </a>
               </div>
             </div>
           </div>
@@ -217,13 +226,13 @@
                 accusantium delectus error consequatur nulla et.
               </p>
               <div class="amenities-scrollIn scrollIn">
-                <button id="amenities-button" class="btn btn-background-slide">
+                <a id="amenities-button" class="btn btn-background-slide">
                   Click To Learn More
                   <i class="gg-arrow-right d-inline-block"></i>
                   <div
                     class="text-light btn-background-slide--blue btn-background-slide-bg"
                   ></div>
-                </button>
+                </a>
               </div>
             </div>
           </div>
@@ -260,13 +269,13 @@
                 et.
               </p>
               <div class="live-scrollIn scrollIn">
-                <button id="live-button" class="btn btn-background-slide">
+                <a id="live-button" class="btn btn-background-slide">
                   Click To Learn More
                   <i class="gg-arrow-right d-inline-block"></i>
                   <div
                     class="text-light btn-background-slide--blue btn-background-slide-bg"
                   ></div>
-                </button>
+                </a>
               </div>
             </div>
           </div>
