--- a/pages/work.html
+++ b/pages/work.html
@@ -7,7 +7,7 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Bootstrap Files -->
-    <link rel="stylesheet" href="./css/bootstrap.css" />
+    <link rel="stylesheet" href="../css/bootstrap.css" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,7 +19,102 @@
     <link rel="stylesheet" href="../css/styles/work.css" />
   </head>
   <body>
-    <script src="./js/bootstrap.bundle.js" async defer></script>
+    <!-- START NAV -->
+    <nav
+      class="navbar navbar-expand-lg fixed-top fs-5 bg-light shadow scrollIn"
+    >
+      <div id="nav-div" class="container-fluid">
+        <a class="navbar-brand fs-3 d-none d-lg-block" href="./index.html">
+          <img
+            src="../images/Homegrown_crop_1.jpg"
+            alt="Logo"
+            class="d-inline-block"
+            height="70"
+          />
+          Discover Mercer County</a
+        >
+        <a id="goMercerCounty" class="navbar-brand fs-3 d-lg-none" href="#">
+          <img
+            src="../images/Homegrown_crop_1.jpg"
+            alt="Logo"
+            class="d-inline-block"
+            height="70"
+          />
+          Go Mercer County</a
+        >
+        <button
+          id="mobile-nav-button"
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <!-- <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Work
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a class="dropdown-item" href="./pages/work.html">Work</a>
+                </li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </li>
+              </ul>
+            </li> -->
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="./pages/work.html"
+                >Work</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#">Live</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/work.html">Learn</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/play.html">Play</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/about.html">About</a>
+            </li>
+          </ul>
+          <!-- <form class="d-flex" role="search">
+          <input
+          class="form-control me-2"
+          type="search"
+          placeholder="Search"
+          aria-label="Search"
+          />
+          <button class="btn btn-outline-success" type="submit">
+            Search
+          </button>
+        </form> -->
+        </div>
+      </div>
+    </nav>
+    <!-- END NAV -->
+
+    <!-- The indeed link for seeing current job openings -->
+    <!-- https://www.indeed.com/jobs?q=&l=Mercer+County+PA -->
+    <script src="../js/bootstrap.bundle.js" async defer></script>
     <script src="" async defer></script>
   </body>
 </html>
