--- a/pages/work.html
+++ b/pages/work.html
@@ -24,7 +24,7 @@
       class="navbar navbar-expand-lg fixed-top fs-5 bg-light shadow scrollIn"
     >
       <div id="nav-div" class="container-fluid">
-        <a class="navbar-brand fs-3 d-none d-lg-block" href="./index.html">
+        <a class="navbar-brand fs-3 d-none d-lg-block" href="../index.html">
           <img
             src="../images/Homegrown_crop_1.jpg"
             alt="Logo"
@@ -78,9 +78,7 @@
               </ul>
             </li> -->
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="./pages/work.html"
-                >Work</a
-              >
+              <a class="nav-link" aria-current="page" href="#">Work</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="#">Live</a>
@@ -111,6 +109,26 @@
       </div>
     </nav>
     <!-- END NAV -->
+
+    <header class="shadow">
+      <div class="text-center">
+        <h1 class="display-1">Work Hard</h1>
+      </div>
+      <p class="lead display-6">
+        Find work in Mercer County's Thriving Job Market
+      </p>
+    </header>
+
+    <main>
+      <div>
+        <h1 class="text-light">
+          One One One One One One One One One One One One One One
+        </h1>
+      </div>
+      <div>
+        <h1 class="text-light">Two</h1>
+      </div>
+    </main>
 
     <!-- The indeed link for seeing current job openings -->
     <!-- https://www.indeed.com/jobs?q=&l=Mercer+County+PA -->
