Initial work page number counter

--- a/pages/work.html
+++ b/pages/work.html
@@ -83,24 +83,30 @@
         <h1 class="display-1">Work Hard</h1>
       </div>
       <p class="lead display-6">
-        Find work in Mercer County's Thriving Job Market
+        Find work and education in Mercer County's Thriving Job Market
       </p>
     </header>
 
     <main>
       <div>
-        <h1 class="text-light">
-          One One One One One One One One One One One One One One
-        </h1>
+        <h2 class="text-light display-2 text-center">
+          <span id="open-jobs"></span> Open Jobs
+        </h2>
+        <h2 class="text-light display-2 text-center">
+          <span id="two">X-Num</span> Schools
+        </h2>
+        <h2 class="text-light display-2 text-center">
+          <span id="three">X-Num</span> Companies
+        </h2>
       </div>
-      <div>
+      <!-- <div>
         <h1 class="text-light">Two</h1>
-      </div>
+      </div> -->
     </main>
 
     <!-- The indeed link for seeing current job openings -->
     <!-- https://www.indeed.com/jobs?q=&l=Mercer+County+PA -->
     <script src="../js/bootstrap.bundle.js" async defer></script>
-    <script src="" async defer></script>
+    <script src="../js/work-scripts.js" async defer></script>
   </body>
 </html>
