Class instantiation iterator added to work-scripts.js w/ intersectionObserver activation

--- a/pages/work.html
+++ b/pages/work.html
@@ -88,15 +88,15 @@
     </header>
 
     <main>
-      <div>
+      <div id="countingValues">
         <h2 class="text-light display-2 text-center">
-          <span id="open-jobs"></span> Open Jobs
+          <span id="one"></span> Salary
         </h2>
         <h2 class="text-light display-2 text-center">
-          <span id="two">X-Num</span> Schools
+          <span id="two"></span> Schools
         </h2>
         <h2 class="text-light display-2 text-center">
-          <span id="three">X-Num</span> Companies
+          <span id="three"></span> Job Openings
         </h2>
       </div>
       <!-- <div>
