Added date tracking to numbers. Refactored class Iterator. Beginning Stylings

--- a/pages/work.html
+++ b/pages/work.html
@@ -84,7 +84,7 @@
     </nav>
     <!-- END NAV -->
 
-    <header class="shadow">
+    <header class="shadow-lg">
       <div class="text-center">
         <h1 class="display-1">Work Hard</h1>
       </div>
@@ -93,16 +93,16 @@
       </p>
     </header>
 
-    <main>
+    <main class="shadow-lg">
       <div id="countingValues">
         <h2 class="text-light display-2 text-center">
-          <span id="one"></span> Salary
+          $<span class="text-end" id="one"></span> Average Salary
         </h2>
         <h2 class="text-light display-2 text-center">
-          <span id="two"></span> Schools
+          <span class="text-end" id="two"></span> Schools
         </h2>
         <h2 class="text-light display-2 text-center">
-          <span id="three"></span> Job Openings
+          <span class="text-end" id="three"></span> Job Openings
         </h2>
       </div>
       <!-- <div>
