Header styling and bootstrap class changes

--- a/pages/work.html
+++ b/pages/work.html
@@ -85,9 +85,13 @@
     <!-- END NAV -->
 
     <header class="shadow-lg">
-      <div class="text-center">
+      <div class="text-center d-none d-sm-block">
         <h1 class="display-1">Work Hard</h1>
       </div>
+      <div class="text-start d-block d-sm-none">
+        <h1 class="display-1">Work Hard</h1>
+      </div>
+
       <p class="lead display-6">
         Find work and education in Mercer County's Thriving Job Market
       </p>
