--- a/pages/work.html
+++ b/pages/work.html
@@ -39,7 +39,11 @@
           />
           Discover Mercer County</a
         >
-        <a id="goMercerCounty" class="navbar-brand fs-3 d-lg-none" href="#">
+        <a
+          id="goMercerCounty"
+          class="navbar-brand fs-3 d-lg-none"
+          href="../index.html"
+        >
           <img
             src="../images/Homegrown_crop_1.jpg"
             alt="Logo"
@@ -88,17 +92,19 @@
       <div class="text-center d-none d-sm-block">
         <h1 class="display-1">Work Hard</h1>
       </div>
-      <div class="text-start d-block d-sm-none">
+      <div class="container text-start d-block d-sm-none">
         <h1 class="display-1">Work Hard</h1>
       </div>
 
-      <p class="lead display-6">
-        Find work and education in Mercer County's Thriving Job Market
-      </p>
+      <div class="container">
+        <p class="lead display-6">
+          Find work and education in Mercer County's Thriving Job Market
+        </p>
+      </div>
     </header>
 
     <main class="shadow-lg">
-      <div id="countingValues">
+      <div class="countingValues">
         <h2 class="text-light display-2 text-center">
           $<span class="text-end" id="one"></span> Average Salary
         </h2>
@@ -109,6 +115,17 @@
           <span class="text-end" id="three"></span> Job Openings
         </h2>
       </div>
+      <!-- <div class="countingValues d-none d-sm-block">
+        <h2 class="text-light display-2 text-center">
+          $<span class="text-end" id="one"></span> Average Salary
+        </h2>
+        <h2 class="text-light display-2 text-center">
+          <span class="text-end" id="two"></span> Schools
+        </h2>
+        <h2 class="text-light display-2 text-center">
+          <span class="text-end" id="three"></span> Job Openings
+        </h2>
+      </div> -->
       <!-- <div>
         <h1 class="text-light">Two</h1>
       </div> -->
