Work page mobile version js iterable classLists manipulation

--- a/pages/work.html
+++ b/pages/work.html
@@ -105,7 +105,7 @@
 
     <main class="shadow-lg">
       <div class="countingValues">
-        <h2 class="text-light display-2 text-center">
+        <h2 id="firstH2" class="text-light display-2 text-center">
           $<span class="text-end" id="one"></span> Average Salary
         </h2>
         <h2 class="text-light display-2 text-center">
