--- a/pages/work.html
+++ b/pages/work.html
@@ -89,7 +89,7 @@
     <!-- END NAV -->
 
     <header class="shadow-lg">
-      <div class="text-center d-none d-sm-block">
+      <div class="text-center container d-none d-sm-block">
         <h1 class="display-1">Work Hard</h1>
       </div>
       <div class="container text-start d-block d-sm-none">
@@ -103,11 +103,13 @@
       </div>
     </header>
 
+    <!--------------------- COUNTER NUMBER OF SALARY/SCHOOLS/JOB OPENINGS SECTION --------------------->
     <main class="shadow-lg">
       <div class="countingValues">
         <h2 id="firstH2" class="text-light display-2 text-center">
           $<span class="text-end" id="one"></span> Average Salary
         </h2>
+
         <h2 class="text-light display-2 text-center">
           <span class="text-end" id="two"></span> Schools
         </h2>
@@ -115,21 +117,58 @@
           <span class="text-end" id="three"></span> Job Openings
         </h2>
       </div>
-      <!-- <div class="countingValues d-none d-sm-block">
-        <h2 class="text-light display-2 text-center">
-          $<span class="text-end" id="one"></span> Average Salary
-        </h2>
-        <h2 class="text-light display-2 text-center">
-          <span class="text-end" id="two"></span> Schools
-        </h2>
-        <h2 class="text-light display-2 text-center">
-          <span class="text-end" id="three"></span> Job Openings
-        </h2>
-      </div> -->
-      <!-- <div>
-        <h1 class="text-light">Two</h1>
-      </div> -->
     </main>
+
+    <!-- LINKS BLOCK -->
+    <section id="picture-links" class="container-fluid px-0">
+      <div>
+        <!-- <h2>Div 1</h2> -->
+        <a href="../index.html">
+          <div
+            id="carouselExampleSlidesOnly"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="../images/schools/thiel.jpg"
+                  class="d-block w-100"
+                  alt="..."
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="../images/schools/westminster.jpg"
+                  class="d-block w-100"
+                  alt="..."
+                />
+              </div>
+              <div class="carousel-item">
+                <img src="..." class="d-block w-100" alt="..." />
+              </div>
+            </div>
+          </div>
+        </a>
+        <!-- <a href="../index.html"
+          ><img src="../images/schools/westminster.jpg" alt="" srcset=""
+        /></a> -->
+      </div>
+      <div>
+        <!-- <h2>Div 2</h2> -->
+        <a href="../index.html"
+          ><img src="../images/schools/westminster.jpg" alt="" srcset=""
+        /></a>
+      </div>
+
+      <!-- <h2 class="display-2 text-center">Let us help you find work</h2>
+      <p class="lead">I'm sample text!</p>
+      <p class="lead">I'm sample text!</p>
+      <p class="lead">I'm sample text!</p>
+      <p class="lead">I'm sample text!</p>
+      <p class="lead">I'm sample text!</p>
+      <p class="lead">I'm sample text!</p> -->
+    </section>
 
     <!-- The indeed link for seeing current job openings -->
     <!-- https://www.indeed.com/jobs?q=&l=Mercer+County+PA -->
