--- a/pages/work.html
+++ b/pages/work.html
@@ -121,54 +121,54 @@
 
     <!-- LINKS BLOCK -->
     <section id="picture-links" class="container-fluid px-0">
+      <!-- LEFT -->
       <div>
-        <!-- <h2>Div 1</h2> -->
-        <a href="../index.html">
-          <div
-            id="carouselExampleSlidesOnly"
-            class="carousel slide"
-            data-bs-ride="carousel"
-          >
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img
-                  src="../images/schools/thiel.jpg"
-                  class="d-block w-100"
-                  alt="..."
-                />
-              </div>
-              <div class="carousel-item">
-                <img
-                  src="../images/schools/westminster.jpg"
-                  class="d-block w-100"
-                  alt="..."
-                />
-              </div>
-              <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="..." />
-              </div>
+        <div
+          id="carouselExampleSlidesOnly"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="image carousel-item active">
+              <img
+                class="img-fluid image-links d-block w-100"
+                src="../images/schools/grove-city-college.png"
+                alt=""
+              />
+            </div>
+            <div class="image carousel-item">
+              <img
+                id="thiel"
+                src="../images/schools/thiel.jpg"
+                class="image-links d-block w-100"
+                alt="..."
+              />
             </div>
           </div>
-        </a>
-        <!-- <a href="../index.html"
-          ><img src="../images/schools/westminster.jpg" alt="" srcset=""
-        /></a> -->
-      </div>
-      <div>
-        <!-- <h2>Div 2</h2> -->
-        <a href="../index.html"
-          ><img src="../images/schools/westminster.jpg" alt="" srcset=""
-        /></a>
+        </div>
       </div>
 
-      <!-- <h2 class="display-2 text-center">Let us help you find work</h2>
-      <p class="lead">I'm sample text!</p>
-      <p class="lead">I'm sample text!</p>
-      <p class="lead">I'm sample text!</p>
-      <p class="lead">I'm sample text!</p>
-      <p class="lead">I'm sample text!</p>
-      <p class="lead">I'm sample text!</p> -->
+      <!-- RIGHT -->
+      <div>
+        <div
+          id="carouselExampleSlidesOnly"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div id="jobs-image" class="image carousel-item active">
+              <img
+                class="img-fluid image-links d-block w-100"
+                src="../images/jobs/plant-tour.jpg"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
+
+    <section style="height: 10rem; width: 100%"></section>
 
     <!-- The indeed link for seeing current job openings -->
     <!-- https://www.indeed.com/jobs?q=&l=Mercer+County+PA -->
