College links/photos complete

--- a/pages/work.html
+++ b/pages/work.html
@@ -119,8 +119,8 @@
       </div>
     </main>
 
-    <!-- LINKS BLOCK -->
-    <section id="picture-links" class="container-fluid px-0">
+    <!------------------------------------ LINKS BLOCK ------------------------------------>
+    <section id="picture-links-section" class="container-fluid px-0">
       <!-- LEFT -->
       <div>
         <div
@@ -129,19 +129,53 @@
           data-bs-ride="carousel"
         >
           <div class="carousel-inner">
-            <div class="image carousel-item active">
+            <div id="pennstate" class="image carousel-item active">
+              <img
+                src="../images/schools/pennstate-shenango.jpg"
+                class="image-links d-block w-100"
+                alt="Penn State University Photo and Link"
+              />
+            </div>
+            <div id="grove-city" class="image carousel-item">
               <img
                 class="img-fluid image-links d-block w-100"
                 src="../images/schools/grove-city-college.png"
-                alt=""
+                alt="Grove City College Photo and Link"
               />
             </div>
-            <div class="image carousel-item">
+            <div id="thiel" class="image carousel-item">
               <img
-                id="thiel"
                 src="../images/schools/thiel.jpg"
                 class="image-links d-block w-100"
-                alt="..."
+                alt="Thiel College Photo and Link"
+              />
+            </div>
+            <div id="LTI" class="image carousel-item">
+              <img
+                src="../images/schools/LTI.jpg"
+                class="image-links d-block w-100"
+                alt="Laurel Technical Institute Photo and Link"
+              />
+            </div>
+            <div id="westminster" class="image carousel-item">
+              <img
+                src="../images/schools/westminster.png"
+                class="image-links d-block w-100"
+                alt="Westminster University Photo and Link"
+              />
+            </div>
+            <div id="mccc" class="image carousel-item">
+              <img
+                class="img-fluid image-links d-block w-100"
+                src="../images/schools/mercer-county-career-center.jpg"
+                alt="Mercer County Career Center Photo and Link"
+              />
+            </div>
+            <div id="bc3" class="image carousel-item">
+              <img
+                class="img-fluid image-links d-block w-100"
+                src="../images/schools/bc3-linden-pointe.jpg"
+                alt="B C 3 Photo and Link"
               />
             </div>
           </div>
