Refactored NAV links to work page into dropdown menu

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <!-- <li class="nav-item dropdown">
+            <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
@@ -84,21 +84,23 @@
                 Work
               </a>
               <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Find a Job</a></li>
                 <li>
-                  <a class="dropdown-item" href="./pages/work.html">Work</a>
+                  <a class="dropdown-item" href="./pages/work.html"
+                    >View Work Page</a
+                  >
                 </li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
                   <a class="dropdown-item" href="#">Something else here</a>
                 </li>
               </ul>
-            </li> -->
-            <li class="nav-item">
+            </li>
+            <!-- <li class="nav-item">
               <a class="nav-link" aria-current="page" href="./pages/work.html"
                 >Work</a
               >
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="#">Live</a>
             </li>
