--- a/pages/work.html
+++ b/pages/work.html
@@ -66,9 +66,30 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Work</a>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Work
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Find a Job</a></li>
+                <li>
+                  <a class="dropdown-item" href="#">View Work Page</a>
+                </li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </li>
+              </ul>
             </li>
+            <!-- <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#">Work</a>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="#">Live</a>
             </li>
@@ -98,7 +119,7 @@
 
       <div class="container">
         <p class="lead display-6">
-          Find work and education in Mercer County's Thriving Job Market
+          Find Work and Education in Mercer County's Thriving Job Market
         </p>
       </div>
     </header>
