--- a/index.html
+++ b/index.html
@@ -84,7 +84,13 @@
                 Work
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Find a Job</a></li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="./pages/work.html#job-application"
+                    >Find a Job</a
+                  >
+                </li>
                 <li>
                   <a class="dropdown-item" href="./pages/work.html"
                     >View Work Page</a
